--- a/src/Home/Home.form
+++ b/src/Home/Home.form
@@ -343,6 +343,9 @@
             <Component class="fosalgo.FTextField" name="invoiceSearch">
               <Properties>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="0"/>
+                </Property>
                 <Property name="radius" type="int" value="20"/>
               </Properties>
               <Events>
@@ -460,7 +463,7 @@
             <Component class="fosalgo.FTextField" name="fTextField1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI" size="14" style="1"/>
+                  <Font name="Segoe UI" size="14" style="0"/>
                 </Property>
                 <Property name="radius" type="int" value="15"/>
               </Properties>
@@ -482,6 +485,9 @@
         </Component>
         <Component class="fosalgo.FTextField" name="ownerPhone">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
             <Property name="radius" type="int" value="20"/>
           </Properties>
         </Component>
@@ -489,11 +495,17 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="11"/>
             <Property name="focusable" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
             <Property name="radius" type="int" value="20"/>
           </Properties>
         </Component>
         <Component class="fosalgo.FTextField" name="ownerName">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
             <Property name="radius" type="int" value="20"/>
           </Properties>
         </Component>
@@ -513,6 +525,9 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="14" style="0"/>
+                </Property>
                 <Property name="radius" type="int" value="20"/>
               </Properties>
             </Component>
@@ -520,6 +535,9 @@
         </Container>
         <Component class="fosalgo.FTextField" name="VehicleRegNo">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
             <Property name="radius" type="int" value="20"/>
           </Properties>
           <Events>
@@ -527,6 +545,11 @@
           </Events>
         </Component>
         <Component class="CustomComponents.Combobox" name="VehicleTypeComboBox">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VehicleTypeComboBoxActionPerformed"/>
           </Events>
