--- a/src/Reports/EditAndCancelService.form
+++ b/src/Reports/EditAndCancelService.form
@@ -67,7 +67,7 @@
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           <Component id="DepSerCancelButton1" min="-2" pref="125" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="DepSerCancelButton" min="-2" pref="125" max="-2" attributes="0"/>
+                          <Component id="ActionButton" min="-2" pref="125" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -135,7 +135,7 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="DepSerCancelButton" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="ActionButton" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="DepSerCancelButton1" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -242,9 +242,9 @@
             <Property name="radius" type="int" value="20"/>
           </Properties>
         </Component>
-        <Component class="button.MyButton" name="DepSerCancelButton">
+        <Component class="button.MyButton" name="ActionButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Done"/>
+            <Property name="text" type="java.lang.String" value="Update Service"/>
             <Property name="borderColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="b9" green="b4" red="d" type="rgb"/>
             </Property>
